--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -17,7 +17,10 @@
   h1, h2, h3, h4, h5, h6 {
     font-size: 100%;
   }
-  
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
   input, select, option, optgroup, textarea, button,
   pre, code {
     font-size: 100%;
@@ -26,4 +29,7 @@
   
   ol, ul {
     list-style: none;
+  }
+  img {
+    max-width:100%;
   }
