--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,9 @@ h2 {
 h3 {
     font-size:200%;
 }
+h4 {
+    font-size:170%;
+}
 /*Some shared stylings across the page:*/
 
 h1, h2, h3 {
@@ -141,5 +144,20 @@ aside {
 }
 .contact-socials__link:hover {
     opacity:70%;
+}
+.contactInfo {
+    display:flex;
+    flex-flow: wrap column;
+    justify-content:center;
+    align-items:center;
+    margin:5vh;
+}
+/* This margin property is shared and can probably be consolidated later.*/
+.contactInfo__img {
+    width:50px;
+    height:50px;
+}
+.contactInfo__header, .contactInfo__img, .contactInfo__info {
+    margin:1vh;
 }
 /* Styling begins for footer: */
